Vista de proyectos mejorada en movil

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="./public/avatar.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kevin Javier Rojo</title>
+    <meta
+      name="description"
+      content="Portafolio de Kevin Rojo, desarrollador front-end especializado en HTML, CSS, JavaScript y React."
+    />
+    <meta
+      name="keywords"
+      content="desarrollador front-end, portafolio, HTML, CSS, JavaScript, React"
+    />
+    <meta name="author" content="Kevin Rojo" />
+    <title>Portafolio de Kevin Rojo | Desarrollador Front-End</title>
   </head>
   <body>
     <div id="root"></div>
