--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       content="desarrollador front-end, portafolio, HTML, CSS, JavaScript, React"
     />
     <meta name="author" content="Kevin Rojo" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <title>Portafolio de Kevin Rojo | Desarrollador Front-End</title>
   </head>
   <body>
