--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="./public/avatar.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <meta
       name="description"
       content="Portafolio de Kevin Rojo, desarrollador front-end especializado en HTML, CSS, JavaScript y React."
@@ -20,12 +20,11 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
-    
-    <title>Portafolio de Kevin Rojo | Desarrollador Front-End</title>
+
+    <title>KRDEV | Portafolio de Desarrollador Front-End</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-
   </body>
 </html>
